# rust-course

02_cargo_init/: Cargo.toml
02_cargo_init/src/: main.rs
02_cargo_new/: Cargo.toml
02_cargo_new/src/: main.rs
03_constants/src/: main.rs
04_casting/src/: main.rs
05_functions/src/: main.rs
06_control_flow/src/: main.rs
07_data_structure/src/: main.rs
08_ownership_n_borrowing/: Cargo.toml
08_ownership_n_borrowing/src/: main.rs
09_error_handling/src/: main.rs
10_packages/: Cargo.toml
10_packages/src/: main.rs
10_packages/src/math/: operations.rs
11_collections/src/: main.rs
12_file_system/src/: file.rs  main.rs
eduardo_functions/: Cargo.toml
eduardo_functions/src/: lib.rs
math/: Cargo.toml
math/src/: main.rs
