[package]
name = "eduardo_functions"
version = "0.1.1"
edition = "2021"
authors = ["Eduardo <eduwric@gmail.com>"]
description = "Helper function libraries"
homepage = "https://github.com/eduwr/rust-course/tree/main/eduardo_functions"
license = "MIT"

keywords = ["eduwric", "helper", "functions"]
categories = ["functions"]

[dependencies]
